// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DialogGenerator without buttons 1`] = `
<div
  aria-describedby="eds-dialog-customcontent"
  aria-labelledby="eds-dialog-title"
  aria-modal={true}
  className="sc-cTkwdZ ifiwUS sc-jNMdTA dWYvOT"
  elevation="0 11px 15px rgba(0, 0, 0, 0.2),0 9px 46px rgba(0, 0, 0, 0.12),0 24px 38px rgba(0, 0, 0, 0.14)"
  role="dialog"
  tabIndex={0}
>
  <div
    className="sc-bBrOnJ jLIdiP"
    id="eds-dialog-title"
  >
    This is the title
  </div>
  <hr
    className="sc-crrsfI fASQyY sc-cOajty lingOC"
  />
  <div
    className="sc-AzgDb kEbXdS"
    id="eds-dialog-customcontent"
  >
    <p>
      Hello from the inside
    </p>
  </div>
</div>
`;

exports[`renders full DialogGenerator 1`] = `
<div
  aria-describedby="eds-dialog-customcontent"
  aria-labelledby="eds-dialog-title"
  aria-modal={true}
  className="sc-cTkwdZ ifiwUS sc-jNMdTA dWYvOT"
  elevation="0 11px 15px rgba(0, 0, 0, 0.2),0 9px 46px rgba(0, 0, 0, 0.12),0 24px 38px rgba(0, 0, 0, 0.14)"
  role="dialog"
  style={
    Object {
      "width": "300px",
    }
  }
  tabIndex={0}
>
  <div
    className="sc-bBrOnJ jLIdiP"
    id="eds-dialog-title"
  >
    This is the title
  </div>
  <hr
    className="sc-crrsfI fASQyY sc-cOajty lingOC"
  />
  <div
    className="sc-AzgDb kEbXdS"
    id="eds-dialog-customcontent"
  >
    <p>
      Hello from the inside
    </p>
  </div>
  <div
    className="sc-dOSReg dzSUCZ footer"
  >
    <button
      className="sc-hKgILt gtfFEJ"
      disabled={false}
      onClick={[MockFunction]}
      tabIndex={0}
      type="button"
    >
      <span
        className="sc-dlfnbm iOlYhO"
      >
        I changed my mind
      </span>
    </button>
    <button
      className="sc-hKgILt cFGSqi"
      disabled={false}
      onClick={[MockFunction]}
      tabIndex={0}
      type="button"
    >
      <span
        className="sc-dlfnbm iOlYhO"
      >
        I agree
      </span>
    </button>
  </div>
</div>
`;
